add: openapi in folders
